# AgentAgora

./: .gitattributes  .gitignore  CLAUDE.md  FOR_AGENT.md  README.md  pyproject.toml  run-server.ps1  run-server.sh  자유대화_실험_결과_2026-05-14.md  자유대화_실험_리뷰_종합_2026-05-14.md
.agentagora/: agora.db
.claude-plugin/: marketplace.json
docs/: backlog.md  bot-sdk.md  channel-mode.md  comm-matrix.md  dashboard.md  feature-proposals-2026-05-15.md  file-sharing.md  junction-sandboxed-worker.md  manual-smoke-test.md  multi-pc-test.md  plugins.md  schemas-and-bots.md  usage-guide.md  추가기능.txt
examples/: README.md  comm-matrix.csv
plugin/: README.md  SMOKE.md
test-agents/: .gitignore  README.md  apply-comm-matrix.bat  seed-demo.bat  seed-demo.py  spawn-all.bat  start-all.bat  start-all.ps1  start-broker.bat  team-manifest.json
tests/: _helpers.py  conftest.py  test_admin_routes.py  test_auto_register.py  test_broker_http.py  test_broker_http_files.py  test_certs.py  test_channel_adapter.py  test_channel_file_tools.py  test_channel_routes.py  test_close_thread_shutdown.py  test_comm_matrix.py  test_comm_matrix_preset.py  test_dashboard_auth.py  test_dashboard_dispatch.py  test_dashboard_error_mapping.py  test_dashboard_events.py  test_dashboard_health.py  test_dashboard_logbuffer.py  test_dashboard_metrics.py  test_dashboard_protected_paths.py  test_dashboard_routes.py  test_dashboard_static.py  test_dispatcher.py  test_dispatcher_fanout_golden.py  test_dispatcher_hooks.py  test_dispatcher_inflight_edges.py  test_envelope.py  test_file_policy.py  test_file_routes.py  test_file_sharing.py  test_file_store.py  (+60 more)
(+343 files in other folders)
