[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-agora"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0",
    "cryptography>=42",
    "jsonschema>=4.20",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
agent-agora = "agent_agora.__main__:main"
agora-channel = "agent_agora.channel_adapter:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_agora = ["default_schemas.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
